fixed_1 HW5_Optional